Develop astro nacos#1058 (#1060)
* docs(console): update console URL by removing /index.html suffix.

* docs(deployment): update Nacos version reference from 3.1.1 to 3.2.0.

* docs(version): update documentation version references from 3.1.1 to 3.1.2.

* feat(docs): add v3.1 docs menu and update latest badge to v3.2.